syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "./main";

package main;

message NewMessege
{
   string NewField = 1;
}
